--- a/css/styles.css
+++ b/css/styles.css
@@ -581,35 +581,10 @@ img {
     padding-left: 80px;
 }
 
-.footer-subscribe-button {
-    min-width: 165px;
-    height: 40px;
-    color: var(--white-color);
-    background-color: var(--iris-color);
-    /*text-align: center;*/
-    font-style: normal;
-    padding: 8px 24px;
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 4px;
-    border: none;
-}
-
-.subscribe-icon {
-    fill: var(--white-color);
-}
-
 .futer-form {
     display: flex;
     gap: 24px;
-   /* max-width: 264px;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid var(--white-color);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);*/
 }
-
 
 .footer-input {
     font-family: inherit;
@@ -627,6 +602,32 @@ img {
     border: 1px solid var(--white, #FFF);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
+
+.footer-subscribe-button {
+    min-width: 165px;
+    height: 40px;
+    color: var(--white-color);
+    background-color: var(--iris-color);
+    /*text-align: center;*/
+    font-style: normal;
+    padding: 8px 24px;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 4px;
+    border: none;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe-button:hover,
+.footer-subscribe-button:focus {
+    background-color: var(--ocean-color);
+}
+
+.subscribe-icon {
+    fill: var(--white-color);
+}
+
 /*-------------------------------------------portfolio page----------------------------------------------------*/
 .section-portfolio {
     padding: 96px 0 120px 0;
