--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-font:'Roboto', sans-serif;
+    --primary-font: 'Roboto', sans-serif;
     --logo-font: 'Raleway', sans-serif;
     --cloud-color: #F4F4FD;
     --cornflower-color: #E7E9FC;
@@ -8,7 +8,7 @@
     --slate-color: #434455;
     --ocean-color: #404BBF;
     --white-color: #FFFFFF;
-    --lightslate-colr:#8E8F99;
+    --lightslate-colr: #8E8F99;
     --green-color: #31D0AA;
     --dairy-color: #FCFCFC;
 }
@@ -44,7 +44,7 @@ p {
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
-   /* display: flex;*/
+    /* display: flex;*/
 }
 
 .link {
@@ -68,7 +68,7 @@ p {
     text-align: center;
 }
 
-.title  {
+.title {
     color: var(--navy-blue);
     font-size: 20px;
     font-weight: 500;
@@ -77,11 +77,11 @@ p {
 }
 
 .button {
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
 }
 
 img {
@@ -113,8 +113,8 @@ img {
 
 .page-header {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-            0px 1px 1px rgba(46, 47, 66, 0.16),
-            0px 1px 6px rgba(46, 47, 66, 0.08);
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .page-header .container {
@@ -124,7 +124,7 @@ img {
     gap: 332;
 }
 
-.page-header{
+.page-header {
     border-bottom: 1px solid var(--cornflower-color);
 }
 
@@ -190,7 +190,7 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-contacts .link:hover, 
+.header-contacts .link:hover,
 .header-contacts .link:focus {
     color: var(--ocean-color);
 }
@@ -224,7 +224,7 @@ img {
     padding-bottom: 188px;
     margin: 0 auto;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
+            rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -275,7 +275,8 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
-    padding-right: 0px;
+    /* padding-right: 0px;*/
+    padding: 72px 24px 24px 24px;
     transform: translate(-50%, -50%);
     flex-shrink: 0;
     border-radius: 4px;
@@ -284,37 +285,22 @@ img {
         0px 1px 3px 0px rgba(0, 0, 0, 0.12),
         0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
+
 }
 
 .open-modal:hover {
     opacity: 0.8;
 }
 
-.form {
-    display: flex;
-    gap: 16px;
-    flex-direction: column;
-    justify-content: flex-start;
-    max-width: 360px;
-    min-height: 58px;
-    padding: 72px 24px 24px 24px;
+.modal-form {
     color: var(--lightslate-colr);
     font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.03em;
 }
-.form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    padding: 0;
-    margin: 0;
-    border: none;
-}
 
-.group-title {
+.modal-title {
     width: 100%;
     color: var(--navy-blue);
     text-align: center;
@@ -322,61 +308,89 @@ img {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-bottom: 16px;
-
+    margin-bottom: 16px;
 }
 
-.form-label {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 4px;
-  /*  font-size: 12px;*/
+.modal-field {
+    margin-bottom: 8px;
+}
+
+.modal-label {
+    display: inline-block;
+    font-size: 12px;
+    margin-bottom: 4px;
 }
 
 .form-input {
-    width: 360px;
-    min-height: 40px;
+    width: 100%;
+    height: 40px;
     padding-left: 38px;
+    padding-right: 24px;
+    background-color: transparent;
     border-radius: 4px;
+    outline: transparent;
     border: 1px solid var(--navy-blue, rgba(46, 47, 66, 0.40));
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.name-div {
-   /* position: relative;*/
+.form-input:focus {
+    border-color: var(--iris-color);
 }
 
-.name-icon {
+.form-input:focus+.modal-input-icon {
+    fill: var(--iris-color);
+}
+
+.modal-input-wrap {
+    position: relative;
+}
+
+.modal-input-icon {
     position: absolute;
-    left: 16px;
-    top: 27px;
     fill: var(--navy-blue);
-
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .textarea {
-    max-width: 360px;
-    min-height: 120px;
+    width: 100%;
+    height: 120px;
+    background-color: transparent;
     border-radius: 4px;
     border: 1px solid var(--navy-blue, rgba(46, 47, 66, 0.40));
     color: var(--navy-blue);
-    padding-top: 8px;
-    padding-left: 16px;
+    padding: 8px 16px;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.03em;
     margin-bottom: 0px;
+    outline: transparent;
+    resize: none;
+}
+
+.textarea:focus {
+    border-color: var(--iris-color);
+}
+
+.textarea:focus::placeholder {
+    color: var(--iris-color);
+}
+
+.privacy-policy-link {
+    color: var(--iris-color);
 }
 
 .check-input {
-    margin-top: 8px;
+    margin-top: 16px;
     margin-bottom: 24px;
 }
 
 .submit-button {
+    display: block;
     width: 169px;
     height: 56px;
     margin: 0 auto;
@@ -456,7 +470,7 @@ img {
 }
 
 .icons-section-two {
-   /* position: relative;*/
+    /* position: relative;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -464,7 +478,7 @@ img {
     border-radius: 4px;
     background-color: var(--cloud-color);
     margin-bottom: 8px;
-  /*  z-index: 1;*/
+    /*  z-index: 1;*/
 }
 
 /*-------------------------------------section three pade index-----------------------------------------*/
@@ -505,8 +519,8 @@ img {
     align-items: center;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+        0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+        0px 1px 6px 0px rgba(46, 47, 66, 0.08);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -598,7 +612,7 @@ img {
     height: 100%;
     padding: 16px 32px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-customers:hover,
@@ -607,7 +621,7 @@ img {
     border: 1px solid var(--ocean-color);
 }
 
-.icon-customers {  
+.icon-customers {
     width: 104px;
     height: 56px;
     fill: currentColor;
@@ -644,7 +658,7 @@ img {
     color: var(--white-color);
 }
 
-.container-footer{
+.container-footer {
     display: flex;
     align-items: baseline;
 }
@@ -674,7 +688,7 @@ img {
 .link-footer:hover,
 .link-footer:focus {
     background-color: var(--green-color);
-}   
+}
 
 .subscribe-conteiner {
     padding-left: 80px;
@@ -783,7 +797,7 @@ img {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-    
+
 }
 
 .text-portfolio {
