--- a/css/styles.css
+++ b/css/styles.css
@@ -739,18 +739,24 @@ img {
 .footer-input {
     font-family: inherit;
     font-size: 12px;
+    line-height: 1.5;
     font-style: normal;
     font-weight: 400;
     line-height: 2.0px;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.04em;
     color: var(--white-color);
-    padding: 8px 212px 8px 16px;
-    background-color: var(--navy-blue);
+    /*padding: 8px 212px 8px 16px;*/
+    padding-left: 16px;
+    background-color: transparent;
     width: 264px;
     height: 40px;
     border-radius: 4px;
     border: 1px solid var(--white, #FFF);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.footer-input::placeholder {
+    color: var(--white-color);
 }
 
 .footer-subscribe-button {
@@ -758,11 +764,10 @@ img {
     height: 40px;
     color: var(--white-color);
     background-color: var(--iris-color);
-    /*text-align: center;*/
     font-style: normal;
     padding: 8px 24px;
     display: inline-flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     border-radius: 4px;
     border: none;
@@ -776,6 +781,7 @@ img {
 
 .subscribe-icon {
     fill: var(--white-color);
+    margin-left: 16px;
 }
 
 /*-------------------------------------------portfolio page----------------------------------------------------*/
