--- a/css/styles.css
+++ b/css/styles.css
@@ -292,13 +292,12 @@ img {
     opacity: 0.8;
 }
 
-.modal-form {
-    color: var(--lightslate-colr);
+/*.modal-form {
+
     font-size: 12px;
     font-weight: 400;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-}
+
+}*/
 
 .modal-title {
     width: 100%;
@@ -312,13 +311,16 @@ img {
 }
 
 .modal-field {
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 
 .modal-label {
-    display: inline-block;
+    display: block;
     font-size: 12px;
     margin-bottom: 4px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--lightslate-colr);
 }
 
 .form-input {
@@ -329,8 +331,8 @@ img {
     background-color: transparent;
     border-radius: 4px;
     outline: transparent;
-    border: 1px solid var(--navy-blue, rgba(46, 47, 66, 0.40));
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus {
@@ -351,7 +353,7 @@ img {
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .textarea {
@@ -366,10 +368,11 @@ img {
     font-style: normal;
     font-weight: 400;
     line-height: 1.17;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.04em;
     margin-bottom: 0px;
     outline: transparent;
     resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .textarea:focus {
@@ -386,8 +389,12 @@ img {
 } 
 
 .privacy-policy {
-    display: flex;
-    align-items: center;
+   /* display: flex;
+    align-items: center;*/
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--lightslate-colr)
    /* justify-content: center;*/
 -
 }
@@ -401,15 +408,15 @@ img {
 .check-accept {
     width: 16px;
     height: 16px;
-    border-radius: 1.5px;
-    border: 1.5px solid  rgba(46, 47, 66, 0.40);
+    border-radius: 2px;
+    border: 1px solid  rgba(46, 47, 66, 0.40);
     margin-right: auto;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     fill: transparent;
     margin-right: auto;
-    /*transition-duration: 300ms;*/
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-icon {
@@ -428,7 +435,7 @@ img {
 
 .submit-button {
     display: block;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     margin: 0 auto;
     padding: 16px 32px;
@@ -438,6 +445,7 @@ img {
     border: none;
     color: var(--white-color);
     text-align: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button {
