--- a/css/styles.css
+++ b/css/styles.css
@@ -331,7 +331,7 @@ img {
     background-color: transparent;
     border-radius: 4px;
     outline: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.40);
+    border: 1px solid rgba(46, 47, 66, 0.4);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -361,8 +361,8 @@ img {
     height: 120px;
     background-color: transparent;
     border-radius: 4px;
-    border: 1px solid var(--navy-blue, rgba(46, 47, 66, 0.40));
-    color: var(--navy-blue);
+    border: 1px solid rgba(46, 47, 66, 0.4)
+    color: rgba(46, 47, 66, 0.4);
     padding: 8px 16px;
     font-size: 12px;
     font-style: normal;
@@ -401,8 +401,8 @@ img {
 
 .privacy-policy-link {
     color: var(--iris-color);
-    padding-left: 3px;
-    display: block;
+    padding-left: 1px;
+    display: inline-block;
 }
 
 .check-accept {
