--- a/css/styles.css
+++ b/css/styles.css
@@ -356,12 +356,16 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.comment {
+    margin-bottom: 16px;
+}
+
 .textarea {
     width: 100%;
     height: 120px;
     background-color: transparent;
     border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 0.4)
+    border: 1px solid rgba(46, 47, 66, 0.4);
     color: rgba(46, 47, 66, 0.4);
     padding: 8px 16px;
     font-size: 12px;
@@ -389,19 +393,14 @@ img {
 } 
 
 .privacy-policy {
-   /* display: flex;
-    align-items: center;*/
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    color: var(--lightslate-colr)
-   /* justify-content: center;*/
--
+    color: var(--lightslate-colr);
 }
 
 .privacy-policy-link {
     color: var(--iris-color);
-    padding-left: 1px;
     display: inline-block;
 }
 
@@ -423,10 +422,10 @@ img {
     margin-bottom: 0 auto;
 }
 
-.check-input:checked + .privacy-policy .check-accept {
+.check-input:checked + .check-accept {
     background-color: var(--ocean-color);
     border: none;
-    fill: var(--white-color);
+    fill: var(--cloud-color);
 }
 
 .chek-input:focus + .check-accept {
@@ -750,7 +749,6 @@ img {
     line-height: 1.5;
     font-style: normal;
     font-weight: 400;
-    line-height: 2.0px;
     letter-spacing: 0.04em;
     color: var(--white-color);
     /*padding: 8px 212px 8px 16px;*/
