--- a/css/styles.css
+++ b/css/styles.css
@@ -422,7 +422,7 @@ img {
     margin-bottom: 0 auto;
 }
 
-.check-input:checked + .check-accept {
+.check-input:checked+.privacy-policy .check-accept {
     background-color: var(--ocean-color);
     border: none;
     fill: var(--cloud-color);
@@ -751,7 +751,6 @@ img {
     font-weight: 400;
     letter-spacing: 0.04em;
     color: var(--white-color);
-    /*padding: 8px 212px 8px 16px;*/
     padding-left: 16px;
     background-color: transparent;
     width: 264px;
